Update and rename deepseek_html_20250906_0db6f3 (1).html to index.html

--- a/index.html
+++ b/index.html
@@ -1290,7 +1290,7 @@
                 setTimeout(() => {
                     splashScreen.style.display = 'none';
                     mainContent.style.display = 'block';
-                    showToast('Welcome to ZAMIN PRO!', 'success');
+                    showToast('Welcome to ZAMIN Bg reomver!', 'success');
                 }, 500);
             }, 3000);
             
